--- a/WebScraper_PropertyResearch.csproj
+++ b/WebScraper_PropertyResearch.csproj
@@ -13,6 +13,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+    <PackageReference Include="Selenium.Support" Version="4.11.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="117.0.5938.2200-beta" />
   </ItemGroup>
 
 </Project>
